--- a/public/css/secret.css
+++ b/public/css/secret.css
@@ -1,4 +1,10 @@
 /* 密钥管理页面样式 */
+
+body {
+  /* Screen version */
+  font-family: "LXGW WenKai Screen", sans-serif;
+}
+
 .secret-status {
     padding: 1rem;
     border-radius: 0.5rem;
